--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "eslint": "^8.54.0",
     "eslint-config-google": "^0.14.0"
+  },
+  "engines": {
+    "node": ">=18.17.1"
   }
 }
