--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "start": "node src/server",
-    "build": "npm run start"
+    "build": "npm run lint && npm run test && npm run start"
   },
   "keywords": [],
   "author": "",
