--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "lint": "eslint",
     "test": "mocha",
     "start": "node src/server",
     "build": "npm run lint && npm run test && npm run start"
