--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "scripts": {
     "lint": "eslint",
-    "test": "mocha",
-    "start": "node src/server",
-    "build": "npm run lint && npm run test && npm run start"
+    "build": "npm run lint && npm run start",
+    "start": "node your-start-script.js"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
