--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "lint": "eslint",
     "build": "npm run lint && npm run start",
-    "start": "node your-start-script.js"
+    "start": "node src/server.js"
   },
-  
+
   "keywords": [],
   "author": "",
   "license": "ISC",
