--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
-    "build": "npm run lint && npm run start",
     "start": "node src/server.js"
   },
 
